Add multi-coin support with dropdown selection

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,5 @@ UPBIT_SECRET_KEY=your_upbit_secret_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
 # 거래 설정
+# 거래할 코인 티커 (예: KRW-BTC, KRW-ETH, KRW-XRP, KRW-DOGE 등)
 TRADE_TICKER=KRW-BTC
-TRADE_AMOUNT=10000
-MIN_TRADE_AMOUNT=5000
