--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -42,8 +42,10 @@
     "@mui/material": "^6.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ws": "^8.18.1",
     "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "ws": "^8.18.2"
   }
 }
