--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -46,6 +46,8 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rss-parser": "^3.13.0",
+    "ts-node": "^10.9.2",
     "ws": "^8.18.2"
   },
   "optionalDependencies": {
