--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -10,7 +10,12 @@
     "dev:build": "webpack --watch",
     "dev:electron": "electron .",
     "dist": "npm run build && electron-builder",
-    "dist:win": "npm run build && electron-builder --win"
+    "dist:win": "npm run build && electron-builder --win",
+    "test:features": "electron test-all-features.js",
+    "test:calculations": "electron test-calculations.js",
+    "test:scenarios": "electron test-scenarios.js",
+    "test:performance": "electron test-performance.js",
+    "test:all": "run-comprehensive-test.bat"
   },
   "keywords": [
     "trading",
@@ -40,12 +45,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "@mui/x-date-pickers": "^7.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/ws": "^8.18.1",
     "axios": "^1.7.7",
+    "date-fns": "^2.30.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.0",
     "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2",
     "ws": "^8.18.2"
