--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -61,9 +61,10 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "electron-updater": "^6.6.2",
+    "framer-motion": "^12.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.0",
+    "recharts": "^2.15.3",
     "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2",
     "ws": "^8.18.2"
