사용설명서

--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "npm run build && electron .",
     "build": "webpack",
-    "dev": "concurrently \"webpack --watch\" \"electron .\"",
+    "dev": "concurrently \"webpack --watch\" \"electron electron-dev.js\"",
     "dev:build": "webpack --watch",
-    "dev:electron": "electron .",
+    "dev:electron": "electron electron-dev.js",
+    "dev:separate": "npm run build && electron electron-dev.js",
     "dist": "npm run build && electron-builder",
     "dist:win": "npm run build && electron-builder --win",
     "dist:win-portable": "npm run build && electron-builder --win portable",
@@ -56,14 +57,17 @@
     "@mui/x-date-pickers": "^7.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/ws": "^8.18.1",
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "electron-updater": "^6.6.2",
     "framer-motion": "^12.15.0",
+    "markdown-to-jsx": "^7.7.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
     "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2",
