--- a/desktop-app/package.json
+++ b/desktop-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "upbit-ai-trading-desktop",
+  "productName": "Upbit AI Trading",
   "version": "1.1.0",
   "description": "Upbit AI Trading Desktop Application",
   "main": "dist/main.js",
